changement de position de lien dans le footer et ajout de boutons CGV CGU

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -200,15 +200,16 @@
 
                 <div class="col-6 col-sm mb-4 text-center">
                     <div class="font-weight-bold pb-2">Parlons BipBip<br></div>
-                    <a href="{{ path("add_message") }}" title="Contact">Contacte-nous</a><br>
                     <a href="{{ path("presse") }}" title="Espace Presse">Espace Presse</a><br>
-                    <a href="{{ path('protection') }}" title="Protection des données">
-                        Ce qu'on oublie de lire
-                    </a><br>
+                    <p class="m-0">
+                        Ce qu'on oublie de lire:
+                    </p>
+                    <a href="">CGU</a> / <a href="">CGV</a>
                 </div>
 
                 <div class="offset-3 col-9 offset-sm-0 col-sm-12 mb-4 text-center">
                     <div class="font-weight-bold pb-2">Besoin d'aide ?<br></div>
+                    <a href="{{ path("add_message") }}" title="Contact">Contacte-nous</a><br>
                     <a href="{{ path('home') }}" title="Comment bien choisir son smarthpone reconditionné ?">Comment bien choisir son smarthpone reconditionné&#8239;?</a><br>
                     <a href="{{ path('home') }}" title="Nos partenaires">Les grades de smartphone reconditionnés BipBip</a><br>
                 </div>
