--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -204,7 +204,7 @@
                     <p class="m-0">
                         Ce qu'on oublie de lire:
                     </p>
-                    <a href="">CGU</a> / <a href="">CGV</a>
+                    <a href="{{ path('cgu') }}">CGU</a> / <a href="{{ path('cgv') }}">CGV</a>
                 </div>
 
                 <div class="offset-3 col-9 offset-sm-0 col-sm-12 mb-4 text-center">
