lien de redirection FAQ integré au text plutot qu'en image

--- a/templates/contact/contact.html.twig
+++ b/templates/contact/contact.html.twig
@@ -8,16 +8,12 @@
                 <div class="row align-items-end">
                     <div class="col-12">
                         <p class="text-justify">Salut toi ! Alors comme ça tu veux papoter ?</p>
-                        <p class="text-justify">Avant de te fatiguer à nous écrire un message, jette un coup d'oeil dans la FAQ !</p>
+                        <p class="text-justify">Avant de te fatiguer à nous écrire un message, jette un coup d'oeil dans la
+                            <a href="{{ path('faq_index') }}" class="font-weight-bold">FAQ</a> !</p>
                     </div>
                     <div class="col-8">
                         <p>A bientôt,<br>
                         L'équipe BipBip !</p>
-                    </div>
-                    <div class="col-2">
-                        <a href="{{ path('faq_index') }}">
-                            <img src="{{ asset('images/faq.png') }}" alt="FAQ" id="faq-btn">
-                        </a>
                     </div>
                 </div>
             </div>
