--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -265,8 +265,6 @@ header {
     /* MENU */
 
     #menu {
-        margin-top: -25px;
-        margin-bottom: 100px;
         a {
             color: black;
             text-decoration: none;
@@ -280,7 +278,7 @@ header {
         display: none;
         z-index: 9998;
         background: #FFFFFF;
-        padding: 1em 2em;
+        padding: 1em 0;
         width: 100%;
         height: 100%;
         position: fixed;
@@ -294,8 +292,20 @@ header {
                 width: 60px;
                 height: 50px;
                 margin: 20px auto;
+                @media screen and (max-width: 768px) {
+                    width: 30px;
+                    height: 30px;
+                    margin: 5px auto;
+                }
             }
         }
+        .text-menu{
+            @media screen and (max-width: 768px) {
+                margin-left: 35px;
+                margin-top: 25px;
+            }
+        }
+
 
         .laCommuDiv {
             margin-top: 50px;
@@ -332,13 +342,16 @@ header {
 
         ul {
             .primary-title-menu-black {
-                font-weight: 900;
+                font-weight: 800;
             }
 
             .primary-title-menu {
                 font-weight: lighter;
                 font-size: 1.2rem;
                 color: $primary-color;
+                @media screen and (max-width: 768px) {
+                    font-size: 1rem;
+                }
             }
         }
 
