--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -207,7 +207,7 @@
                     <a href="{{ path('cgu') }}">CGU</a> / <a href="{{ path('cgv') }}">CGV</a>
                 </div>
 
-                <div class="offset-3 col-9 offset-sm-0 col-sm-12 mb-4 text-center">
+                <div class="col-9 offset-sm-0 col-sm-12 mb-4 text-center">
                     <div class="font-weight-bold pb-2">Besoin d'aide ?<br></div>
                     <a href="{{ path("add_message") }}" title="Contact">Contacte-nous</a><br>
                     <a href="{{ path('home') }}" title="Comment bien choisir son smarthpone reconditionné ?">Comment bien choisir son smarthpone reconditionné&#8239;?</a><br>
