--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -195,7 +195,7 @@
                     <div class="font-weight-bold pb-2">Infos BipBip<br></div>
                     <a href="{{ path("bonsplans") }}" title="Les bons plans">Les bons plans</a><br>
                     <a href="{{ path("recrute") }}" title="Jobs/recrutement">Jobs/recrutement</a><br>
-                    <a href="{{ path("livraisons") }}" title="Livraisons et garanties">Livraisons et garanties</a><br>
+                    <a href="{{ path("livraisons") }}" title="Livraison et garanties">Livraison et garanties</a><br>
                 </div>
 
                 <div class="col-6 col-sm mb-4 text-center">
@@ -210,8 +210,8 @@
                 <div class="col-9 offset-sm-0 col-sm-12 mb-4 text-center">
                     <div class="font-weight-bold pb-2">Besoin d'aide ?<br></div>
                     <a href="{{ path("add_message") }}" title="Contact">Contacte-nous</a><br>
-                    <a href="{{ path('home') }}" title="Comment bien choisir son smarthpone reconditionné ?">Comment bien choisir son smarthpone reconditionné&#8239;?</a><br>
-                    <a href="{{ path('home') }}" title="Nos partenaires">Les grades de smartphone reconditionnés BipBip</a><br>
+                    <a href="{{ path('home') }}" title="Comment bien choisir son smarthphone reconditionné ?">Comment bien choisir son smarthphone reconditionné&#8239;?</a><br>
+                    <a href="{{ path('home') }}" title="Nos partenaires">Les grades de smartphones reconditionnés BipBip</a><br>
                 </div>
 
             </div>
