ajout des photos de collecte sur la page bipers

--- a/assets/scss/bipers.scss
+++ b/assets/scss/bipers.scss
@@ -21,7 +21,7 @@
 }
 
 #plaquettes{
-    .plaquettes{
+    .plaquette{
         width: 90%;
         height: 100px;
         margin-left: auto;
@@ -53,6 +53,4 @@
             vertical-align: middle;
         }
     }
-
-
 }
