--- a/templates/home/collectorBipers.html.twig
+++ b/templates/home/collectorBipers.html.twig
@@ -40,7 +40,7 @@
             <h3 class="title_inter">
                 Devenir site de collecte
             </h3>
-            <div class="plaquettes">
+            <div class="plaquette">
                 <a href="{{ plaquette }}" class="btn btn-info">Voir la plaquette</a>
             </div>
 
@@ -89,9 +89,9 @@
                         </p>
                         <a href="{{ path('add_message') }}" class="secondary-button">Propose un lieu<br>ou une date ici !</a>
                         <div class="content_image mt-5">
-                            <a href="/images/5.png"><img src="/images/5.png" alt="" class="m-1"></a>
-                            <a href="/images/5.png"><img src="/images/5.png" alt="" class="m-1"></a>
-                            <a href="/images/5.png"><img src="/images/5.png" alt="" class="m-1"></a>
+                            <a href="/images/photos_1.jpg"><img src="/images/photos_1.jpg" alt="" class="m-1 h-25 w-25"></a>
+                            <a href="/images/photos_2.jpg"><img src="/images/photos_3.jpg" alt="" class="m-1 h-25 w-25"></a>
+                            <a href="/images/photos_3.jpg"><img src="/images/photos_2.jpg" alt="" class="m-1 h-25 w-25"></a>
                         </div>
                     </div>
                 </div>
