--- a/templates/security/passLink.html.twig
+++ b/templates/security/passLink.html.twig
@@ -49,10 +49,9 @@
         </div>
 
         <div class="footer">
-            <p>ENVIRO SERVICES FRANCE/ Bipbip Mobile</p>
+            <p>Bipbip Mobile</p>
             <p>391 Avenue Clément Ader <p>
             <p>59118 Wambrechies <p>
-            <p>03 20 00 00 00</p>
         </div>
     </main>
 </body>
