Tirets in comment ça marche

--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -104,9 +104,9 @@
                             <img src="{{ asset('images/5.png') }}" alt="5">
                         </div>
                         <div class="col">
-                        <span class="explain-text-color">Récupère ton argent<br>
-                        Fais un don</span> de la valeur de ton tél pour une association<br>
-                            <span class="explain-text-color">Profite d'un bon de réduction</span> sur l'achat
+                        <span class="explain-text-color">- Récupère ton argent<br>
+                        - Fais un don</span> de la valeur de ton tél pour une association<br>
+                            <span class="explain-text-color">- Profite d'un bon de réduction</span> sur l'achat
                             d'un bipbip mobile
                         </div>
                     </div>
