--- a/templates/boutique/boutique.html.twig
+++ b/templates/boutique/boutique.html.twig
@@ -49,12 +49,10 @@ La boutique BipBip
                         </div>
                         <div class="">
                             <p>
-                                descrition
+                                description
                             </p>
                             <p>
-                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus culpa delectus dicta dolorem
-                                dolores error excepturi fugiat fugit hic ipsum neque nesciunt, non officia quaerat quo rem veniam,
-                                vero voluptate.
+                                {{ promo.description }}
                             </p>
                         </div>
                     </div>
@@ -100,7 +98,7 @@ La boutique BipBip
                 <div class="">
                     <p>
                         Quand tu recevras ton green mobile, poste une photo sur Instagram en le mettant bien en avant
-                        dans son emballage ouvert <span class="textBlue">#jesuisbipbip</span> et grâce à toi, 1 € sera reversé
+                        dans son emballage ouvert <span class="textBlue">#BipBipAttitude</span> et grâce à toi, 1 € sera reversé
                         à <span class="textBlue">une asso</span>
                     </p>
                 </div>
