correction image pumpkin flou

--- a/templates/user/confirmCollect.html.twig
+++ b/templates/user/confirmCollect.html.twig
@@ -28,7 +28,7 @@
             </ul>
             <div class="col-5 mx-auto">
                 <a href="https://pumpkin-app.co/" title="Pumpkin" target="_blank">
-                    <img src="{{ asset('images/pumpkin.png') }}" alt="Pumpkin">
+                    <img src="{{ asset('images/pumkin.png') }}" alt="Pumpkin">
                 </a>
             </div>
         </div>
