Update text in menu burger

--- a/templates/faq/index.html.twig
+++ b/templates/faq/index.html.twig
@@ -49,7 +49,7 @@
                         </a>
                     {% endif %}
                 </article>
-                <article class="answer">{{faq.answer}} </article>
+                <article class="answer">{{faq.answer | nl2br }} </article>
             </div>
             {% endfor %}
         {% else %}
