ajout d'une taille sur les image de la boutique pour eviter les cheuvauchement

--- a/templates/boutique/boutique.html.twig
+++ b/templates/boutique/boutique.html.twig
@@ -39,7 +39,7 @@ La boutique BipBip
             <div class="row" id="telephonePromo">
                 {% for promo in promos %}
                     <div class="col-12 col-sm-5 text-center border-left mt-5">
-                        <img src="{{ asset(promo.image) }}" alt="">
+                        <img src="{{ asset(promo.image) }}" alt="téléphone">
                     </div>
                     <div class="col-sm-7 text-center">
                         <div class="text-center mt-5 mb-5">
