--- a/assets/scss/boutique.scss
+++ b/assets/scss/boutique.scss
@@ -40,6 +40,10 @@
             border: none;
         }
         #telephonePromo{
+            img{
+                height: 200px;
+                width: 200px;
+            }
             .priceContener{
                 .price{
                     h3{
