--- a/templates/infos/histoire.html.twig
+++ b/templates/infos/histoire.html.twig
@@ -12,15 +12,15 @@
     <div id="notreHistoire">
         <h1 class="title-page"><span>Notre histoire</span></h1>
         <div class="row justify-content-center">
-            <div class="p-4 w-50">
+            <div class="col-8 ml-4">
                 <img src="{{ asset('images/video.png') }}" alt="video" class="videoNatacha">
             </div>
         </div>
-            <div class="row mb-5">
-                <div class="col-12 col-md-4 text-center">
-                    <img class="img-fluid" src="{{ asset('images/idee-notrehistoire.png') }}" alt="logo">
+            <div class="row mb-5 justify-content-center">
+                <div class="col-8 col-md-4 text-center">
+                    <img class="img-fluid p-4" src="{{ asset('images/idee-notrehistoire.png') }}" alt="logo">
                 </div>
-                <div class="col-12 col-md-8 text-justify p-3">
+                <div class="col-10 col-md-6 mt-4">
                             <p>
                                 Amener sur Lille des points de collectes de smartphone qui vont permettre de: <br>
                                 - Faire un geste pour l'environnement. <br>
@@ -33,7 +33,7 @@
                             </p>
                 </div>
 
-                <div class="col-12 text-justify p-5 ml-5">
+                <div class="col-10">
                         <p>Au plus nous collectons de téléphones, plus les prix de nos BipBip mobile pourront être avantageux tout en gardant sa qualité absolue !<br></p>
                         <p>On compte sur toi pour collecter un <strong>MAXIMUM</strong> de téléphones et de mettre la machine en marche!</p>
                 </div>
