ouverture de la plaquette dans un nouvel onglet

--- a/templates/home/collectorBipers.html.twig
+++ b/templates/home/collectorBipers.html.twig
@@ -41,7 +41,7 @@
                 Devenir site de collecte
             </h3>
             <div class="plaquette">
-                <a href="{{ plaquette }}" class="btn btn-info">Voir la plaquette</a>
+                <a href="{{ plaquette }}" class="btn btn-info" target="_blank">Voir la plaquette</a>
             </div>
 
         </div>
