--- a/templates/user/choiceEnvoi.html.twig
+++ b/templates/user/choiceEnvoi.html.twig
@@ -45,7 +45,7 @@
                 ton estimation.
             </p>
         </div>
-       <a href="{{ path('user_show', {'id': user.id }) }}" class="secondary-button m-auto">
+       <a href="{{ path('user_show') }}" class="secondary-button m-auto">
            Mon profil
        </a>
     </div>
