--- a/templates/user/editUser.html.twig
+++ b/templates/user/editUser.html.twig
@@ -66,7 +66,7 @@
             <div class="col pt-2">
         <button class="primary-button mr-3">{{ button_label|default('Modifier') }}</button>
         {{ form_end(form ) }}
-    <a href="{{ path('user_show', {'id':user.id}) }}" class="third-button">Annuler</a>
+    <a href="{{ path('user_show') }}" class="third-button">Annuler</a>
             </div>
         </div>
     </main>
