--- a/templates/user/showCollect.html.twig
+++ b/templates/user/showCollect.html.twig
@@ -40,7 +40,7 @@
                 <div class="row align-items-center mt-3">
                     <div class="offset-2 col-8 text-center">
                         Ton estimation est sauvegardée sur
-                        <a href="{{ path('user_show', { id:app.user.id}) }}">
+                        <a href="{{ path('user_show') }}">
                             ton compte client
                         </a>.
                     </div>
