--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -42,7 +42,7 @@
                                     </div>
                                     {% if app.user %}
                                         <div class="col">
-                                            <a href="{{ path('user_show', {'id': app.user.id}) }}">
+                                            <a href="{{ path('user_show') }}">
                                                 <img src="{{ asset('images/shopping-cart.png') }}" alt="">
                                             </a>
                                         </div>
