--- a/templates/infos/cgv.html.twig
+++ b/templates/infos/cgv.html.twig
@@ -18,7 +18,7 @@
                 <small class="text-muted">Informations.</small>
             </div>
         </div>
-        <div class="offset-4 col-4">
+        <div class="offset-4 col-4 text-center">
             <a href="{{ path('home') }}" class="primary-button">Accueil</a>
         </div>
     </main>
