resolution de l'alignement des informations personnelles sur le profil

--- a/templates/user/showUser.html.twig
+++ b/templates/user/showUser.html.twig
@@ -108,67 +108,67 @@
     <div class="row mb-3">
         <p class="secondary-title">Informations personnelles</p>
     </div>
-    <div class="row align-items-center">
-        <div class="offset-2 col-3 text-right border-bottom p-2">
+    <div class="row align-items-center border-bottom">
+        <div class="offset-2 col-3 text-right p-2">
             Nom
         </div>
-        <div class="col-5 text-left border-bottom p-2 pl-5">
+        <div class="col-5 text-left p-2 pl-5">
             {{ user.lastname }}
         </div>
     </div>
-    <div class="row align-items-center">
-        <div class="offset-2 col-3 text-right border-bottom p-2">
+    <div class="row align-items-center border-bottom">
+        <div class="offset-2 col-3 text-right p-2">
             Prénom
         </div>
-        <div class="col-5 text-left border-bottom p-2 pl-5">
+        <div class="col-5 text-left p-2 pl-5">
             {{ user.firstname|capitalize }}
         </div>
     </div>
-    <div class="row align-items-center">
-        <div class="offset-2 col-3 text-right border-bottom p-2">
+    <div class="row align-items-center border-bottom">
+        <div class="offset-2 col-3 text-right p-2">
             Email
         </div>
-        <div class="col-5 text-left border-bottom p-2 pl-5">
+        <div class="col-5 text-left p-2 pl-5">
             {{ user.email }}
         </div>
     </div>
-    <div class="row align-items-center">
-        <div class="offset-2 col-3 text-right border-bottom p-2">
+    <div class="row align-items-center border-bottom">
+        <div class="offset-2 col-3 text-right p-2">
             Numéro de téléphone
         </div>
-        <div class="col-5 text-left border-bottom p-2 pl-5">
+        <div class="col-5 text-left p-2 pl-5">
             {{ user.phoneNumber }}
         </div>
     </div>
-    <div class="row align-items-center">
-        <div class="offset-2 col-3 text-right border-bottom p-2">
+    <div class="row align-items-center border-bottom">
+        <div class="offset-2 col-3 text-right p-2">
             Adresse
         </div>
-        <div class="col-5 text-left border-bottom p-2 pl-5">
+        <div class="col-5 text-left p-2 pl-5">
             {{ user.address }}
         </div>
     </div>
-    <div class="row align-items-center">
-        <div class="offset-2 col-3 text-right border-bottom p-2">
+    <div class="row align-items-center border-bottom">
+        <div class="offset-2 col-3 text-right p-2">
             Code postal
         </div>
-        <div class="col-5 text-left border-bottom p-2 pl-5">
+        <div class="col-5 text-left p-2 pl-5">
             {{ user.postCode }}
         </div>
     </div>
-    <div class="row align-items-center">
-        <div class="offset-2 col-3 text-right border-bottom p-2">
+    <div class="row align-items-center border-bottom">
+        <div class="offset-2 col-3 text-right p-2">
             Ville
         </div>
-        <div class="col-5 text-left border-bottom p-2 pl-5">
+        <div class="col-5 text-left p-2 pl-5">
             {{ user.city }}
         </div>
     </div>
-    <div class="row align-items-center">
-        <div class="offset-2 col-3 text-right border-bottom p-2">
+    <div class="row align-items-center border-bottom">
+        <div class="offset-2 col-3 text-right p-2">
             Organisme rattaché
         </div>
-        <div class="col-5 text-left border-bottom p-2 pl-5">
+        <div class="col-5 text-left p-2 pl-5">
             {% if user.organism.organismName is defined %}
                 {{ user.organism.organismName }}
             {% else %}
