redimensionnement des images presentent dans le constat

--- a/assets/scss/histoire.scss
+++ b/assets/scss/histoire.scss
@@ -53,8 +53,8 @@
   }
 
   .img-constat {
-    height: 30vh;
-    width: 50%;
+    height: 23vh;
+    width: 145px;
     margin-bottom: 40px;
     @include media-breakpoint-up(sm) {
       height: 150px;
