--- a/templates/infos/team.html.twig
+++ b/templates/infos/team.html.twig
@@ -35,7 +35,7 @@
            <h1 class="third-title mt-3 mb-3">Notre énergie étudiante</h1>
        </div>
             <div class="col-6 col-sm-6 col-lg-3 col-xl-3 ">
-                <img class="for-4 img-fluid m-4" src="{{asset('images/team-gautier.png')}}" alt="Gauthier">
+                <img class="for-4 img-fluid m-4" src="{{asset('images/team-gautier.png')}}" alt="Gautier">
                 <p class="mt-3 text-justify">
                     Toujours de bonne humeur notre étudiant de l’EDHEC a plus d’un tour dans son sac.
                     Il dégaine le contact aussi vite que son ombre.
@@ -49,7 +49,7 @@
                 </p>
             </div>
             <div class="col-6 col-sm-6 col-lg-3 col-xl-3 ">
-                <img class="for-4 img-fluid m-4" src="{{asset('images/team-clothilde.png')}}" alt="Clothilde">
+                <img class="for-4 img-fluid m-4" src="{{asset('images/team-wilders.png')}}" alt="Wilders">
                 <p class="mt-3 text-justify">
                     Nos 5 étudiants en développement web de la Wild Code School ont su donner vie à notre superbe site internet.
                     On se souviendra de nos réunions en chaussettes et d’une équipe exprime le meilleur d’eux même.
@@ -57,7 +57,7 @@
                 </p>
             </div>
             <div class="col-6 col-sm-6 col-lg-3 col-xl-3 ">
-                <img class="for-4 img-fluid m-4" src="{{asset('images/team-clothilde.png')}}" alt="Clothilde">
+                <img class="for-4 img-fluid m-4" src="{{asset('images/team-ifag.png')}}" alt="IFAG">
                 <p class="mt-3 text-justify">
                     Nos futurs managers de l’IFAG ont su nous donner un coup de pouce pour rendre notre projet encore plus innovant.
                 </p>
