--- a/templates/user/showCollect.html.twig
+++ b/templates/user/showCollect.html.twig
@@ -49,40 +49,40 @@
         {% else %}
             <div class="container">
                 <div class="row align-items-center table-head rounded-top">
-                    <div class="col-3 text-center">
+                    <div class=" col-sm-3 text-center">
                         Partenaire de collecte
                     </div>
-                    <div class="col-3 text-center">
+                    <div class="d-none d-sm-block col-sm-3 text-center">
                         Adresse
                     </div>
-                    <div class="col-3 text-center">
+                    <div class="d-none d-sm-block col-sm-3 text-center">
                         Date de collecte
                     </div>
                     {% if app.user.roles is defined %}
-                        <div class="col-3">
+                        <div class="col-12 col-sm-3">
                         </div>
                     {% endif %}
                 </div>
 
             {% for collect in collects %}
                 <div class="row align-items-center border-bottom">
-                    <div class="col-3 text-center">
+                    <div class="col-sm-3 text-center">
                         <h5>{{ collect.collector.organismName }}</h5>
                     </div>
-                    <div class="col-3 text-center">
+                    <div class="col-sm-3 text-center">
                         {{ collect.collector.organismAddress }},
                         {{ collect.collector.organismPostcode }}
                         {{ collect.collector.organismCity }}
                     </div>
-                    <div class="col-3 text-center">
+                    <div class="col-sm-3 text-center">
                         {{ collect.dateCollect|date('d/m/Y') }} à {{ collect.dateCollect|date('H:i') }}
                     </div>
                     {% if app.user.roles is defined %}
-                        <div class="col-2">
+                        <div class="col-sm-2 p-0">
                             <a class="primary-button" href="{{ path('choice', {collect: collect.id }) }}">J'y vais !</a>
                         </div>
                     {% else %}
-                        <div class="col-2">
+                        <div class="col-sm-2">
                             <a class="primary-button" href="{{ path('app_login') }}">J'y vais !</a>
                         </div>
                     {% endif %}
