orthographe fault corection

--- a/templates/estimation/final_price.html.twig
+++ b/templates/estimation/final_price.html.twig
@@ -12,7 +12,7 @@
                 {% endif %}
                 {% if app.user %}
                 <div class="jumbotron">
-                    <h4>Pour finaliser la vente de ton téléphone, </h4>
+                    <h4>Pour finaliser la vente de ton téléphone </h4>
                     <a class="primary-button" href="{{ path("mode_envoi", {'id': estimation.id  }) }}">Choisis ton mode de dépôt</a>
                 </div>
                 {% else %}
