--- a/templates/infos/histoire.html.twig
+++ b/templates/infos/histoire.html.twig
@@ -45,13 +45,13 @@
         <h1 class="title-page"><span>Notre solution</span></h1>
 
         <div class="row justify-content-center m-4">
-            <p>Bipbip est la solution innovante et environnementale pour la région... on te fait un dessin ?</p>
+            <p>BipBip est la solution innovante et environnementale pour la région... on te fait un dessin ?</p>
             <img class="img-fluid w-75 mt-3" src="{{ asset('images/schema-solution.png') }}" alt="solution">
         </div>
 
         <div class="row m-2">
             <div class="col-12 mx-auto text-justify p-3 mt-5">
-                <p>Bip Bip Mobile a pour mission de faire le ménage dans les Hauts-de-France en proposant de recycler tous les téléphones
+                <p>BipBip Mobile a pour mission de faire le ménage dans les Hauts-de-France en proposant de recycler tous les téléphones
                     usagés ou inutilisés à l'aide des associations étudiantes qui nous accueillent et nous accompagnent lors des points de collecte.</br>
                     C'est l'occasion pour nos partenaires locaux de se faire connaître davantage dans notre région.</p>
 
