--- a/templates/estimation/index.html.twig
+++ b/templates/estimation/index.html.twig
@@ -8,7 +8,7 @@
             <div class="col-12">
                 <h1 class="primary-title text-left">
                     <img class="img-fleche mr-lg-2" src="{{ asset('images/fleche_droite.png') }}" alt="→">Voici quelques questions...</h1>
-                <p>Pour nous aider à estimer la valeur de ton téléphone, sois honnête sur sa description pour en
+                <p><span class="font-weight-bold">Pour nous aider</span> à estimer la valeur de ton téléphone, sois honnête sur sa description pour en
                 connaître sa valeur réelle</p>
             </div>
         </div>
