--- a/templates/user/choiceEnvoi.html.twig
+++ b/templates/user/choiceEnvoi.html.twig
@@ -31,7 +31,7 @@
                     la page te proposant différentes collectes disponibles
                 </p>
                 <p class="text-center">
-                    <a class="primary-button button-depot m-auto" href="{{ path('show_collect') }}">
+                    <a class="primary-button button-depot m-auto" href="{{ path('show_collect', {'id': estimation.id}) }}">
                         Trouver un point de collecte
                     </a>
                 </p>
