feature envoi BDC a l'utilisateur par mail lors de la revente du telephone

--- a/templates/user/showCollect.html.twig
+++ b/templates/user/showCollect.html.twig
@@ -81,7 +81,7 @@
                         <div class="col-sm-2 p-0">
                             <a class="primary-button" href="{{ path('choice', {collect: collect.id }) }}">J'y vais !</a>
                             <a class="primary-button button-chrono mt-1" href="{{ path('envoi_chronopost', {'user': user, 'id': id} ) }}">
-                                Envoie
+                                J'envoie
                             </a>
                         </div>
                     {% else %}
