--- a/templates/user/showUser.html.twig
+++ b/templates/user/showUser.html.twig
@@ -17,7 +17,7 @@
             <p>Chez : {{ user.collect.collector.organismName }}</p>
             <p>Adresse : {{ user.collect.collector.organismAddress }}, {{ user.collect.collector.organismPostcode }}
                 {{ user.collect.collector.organismCity }}</p>
-            <p>Téléphone : {{ user.collect.collector.organismPhone }}</p>
+            <p>Téléphone : 0{{ user.collect.collector.organismPhone }}</p>
             <p><a href="{{ path('reset_collect') }}" class="font-weight-bold">Se désinscrire de cette collecte</a></p>
         {% else %}
             <p>Tu n'es inscrit à aucune collecte.</p>
