Amelioration de l'affichage des infos lors de l'estimation sur mobile

--- a/templates/estimation/quest.html.twig
+++ b/templates/estimation/quest.html.twig
@@ -25,7 +25,7 @@
                 <img class="bubble-info-img" src="{{ asset('/images/info.png') }}" alt="">
                 <div class="bubble-info-bg">
                 </div>
-                <p class="bubble-info-txt">Si ton téléphone est tombé dans l'eau, coche 'oui'</p>
+                <p class="bubble-info-txt w-50">Si ton téléphone est tombé dans l'eau, coche 'oui'</p>
             </div>
         </div>
         <div class="row">
@@ -45,7 +45,7 @@
                 <img class="bubble-info-img" src="{{ asset('/images/info.png') }}" alt="">
                 <div class="bubble-info-bg">
                 </div>
-                <p class="bubble-info-txt">Même si l'écran ne contient qu'une petite griffe, il est considéré comme endommagé</p>
+                <p class="bubble-info-txt w-50">Même si l'écran ne contient qu'une petite griffe, il est considéré comme endommagé</p>
             </div>
         </div>
         <div class="row">
@@ -64,7 +64,7 @@
                 <img class="bubble-info-img" src="{{ asset('/images/info.png') }}" alt="">
                 <div class="bubble-info-bg">
                 </div>
-                <p class="bubble-info-txt">Fissures, griffes, mauvais emboîtement, coche 'oui'</p>
+                <p class="bubble-info-txt w-50">Fissures, griffes, mauvais emboîtement, coche 'oui'</p>
             </div>
         </div>
         <div class="row">
@@ -83,7 +83,7 @@
                 <img class="bubble-info-img" src="{{ asset('/images/info.png') }}" alt="">
                 <div class="bubble-info-bg">
                 </div>
-                <p class="bubble-info-txt">Si tu as l'impression de devoir recharger ton téléphone tous les jours, coche 'oui'</p>
+                <p class="bubble-info-txt w-50">Si tu as l'impression de devoir recharger ton téléphone tous les jours, coche 'oui'</p>
             </div>
         </div>
         <div class="row">
@@ -102,7 +102,7 @@
                 <img class="bubble-info-img" src="{{ asset('/images/info.png') }}" alt="">
                 <div class="bubble-info-bg">
                 </div>
-                <p class="bubble-info-txt">Si un de tes boutons ne fonctionne plus, coche 'non'</p>
+                <p class="bubble-info-txt w-50">Si un de tes boutons ne fonctionne plus, coche 'non'</p>
             </div>
         </div>
         <div class="row">
