--- a/templates/infos/team.html.twig
+++ b/templates/infos/team.html.twig
@@ -66,18 +66,18 @@
             <div class="col-12">
                 <h1 class="third-title mt-3 mb-3">Nos accompagnateurs experts</h1>
             </div>
-            <div class="col-6 col-sm-4 col-lg-4 col-xl-4 justify-content-center">
+            <div class="col-6 col-sm-4 col-lg-4 col-xl-4 text-center">
                 <img class="for-4 img-fluid m-1" src="{{asset('images/expert.png')}}" alt="expert">
                 <p class="mt-3 text-justify">
                 </p>
             </div>
-            <div class="col-6 col-sm-4 col-lg-4 col-xl-4 justify-content-center">
+            <div class="col-6 col-sm-4 col-lg-4 col-xl-4  text-center">
                 <img class="for-4 img-fluid m-1" src="{{asset('images/expert-gd-link.png')}}" alt="gd-link">
                 <p class="mt-3 text-justify">
                     Aussi énergique que directe, elle va droit au but. Le management et la mode n’ont aucun secret pour elle.
                 </p>
             </div>
-            <div class="col-6 col-sm-4 col-lg-4 col-xl-4 justify-content-center">
+            <div class="col-6 col-sm-4 col-lg-4 col-xl-4  text-center">
                 <img class="for-4 img-fluid m-1" src="{{asset('images/expert-corinne.png')}}" alt="Corinne">
                 <p class="mt-3 text-justify">
                     Aussi détendue que bienveillante, elle est toujours dispo pour donner vie à nos projets.
