--- a/templates/estimations/index.html.twig
+++ b/templates/estimations/index.html.twig
@@ -20,9 +20,9 @@
 
             <h1 class="third-title text-center">{{ pageTitle }}</h1>
             <div class="text-right">
-                <button class="third-button text-right" href="{{ path('show_collect') }}">
+                <a class="third-button text-right" href="{{ path('show_collect') }}">
                     Collectes à venir
-                </button>
+                </a>
 
             <div class="row align-items-center mb-2 mt-4">
                 {# legende #}
@@ -91,7 +91,14 @@
                     <div class="col-2 text-center">
                         {{ estimation.estimationDate | date('d/m/Y') }}
                     </div>
-                    <div class="col-3 text-center">
+
+{% if estimation.user.collect is not null %}
+                    <div class="col-2 text-center">
+                        {{ estimation.user.collect.collector.organismName }}
+                    </div>
+{% endif %}
+
+                    <div class="col-2 text-center">
                     {% if estimation.isCollected == 0 and estimation.user is null %}
                         <a class="fourth-button" href="{{ path('estimations_show', {id: estimation.id}) }}">
                             Détails
